<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_Any_two_Numbers"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="43dp"
            android:textStyle="bold">
        </TextView>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_1st_number"
            android:textSize="42sp"
            android:layout_marginStart="25dp"
            android:id="@+id/et1">
        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_2nd_Number"
            android:textSize="42sp"
            android:layout_marginStart="25dp"
            android:id="@+id/et2">
        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textSize="20sp"
                android:id="@+id/bt1"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction"
                android:textSize="20sp"
                android:id="@+id/bt2"
                android:textStyle="bold"
                android:layout_marginStart="10dp" android:layout_marginTop="30dp">
            </Button>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:textSize="20sp"
                android:id="@+id/bt3"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divison"
                android:textSize="20sp"
                android:id="@+id/bt4"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp">
            </Button>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text=""
            android:textSize="30sp"
            android:id="@+id/tb1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp">
        </TextView>
    </TableRow>
</TableLayout>